fixed a bug in dark mode of dasboard page

--- a/assets/base/css/style.css
+++ b/assets/base/css/style.css
@@ -640,6 +640,8 @@ select.dv-input {
 #dv-dashboard-main[data-theme='dark'] .ck-input {background-color: var(--high-dark-blue);color: white;}
 #dv-dashboard-main[data-theme='dark'] .ck-label {background-color: var(--high-dark-blue);}
 #dv-dashboard-main[data-theme='dark'] .ck-labeled-field-view__status {color: #ececec;}
+#dv-dashboard-main[data-theme='dark'] .dv-top-side-title-dashboard-table > h1{color: #ececec !important;}
+#dv-dashboard-main[data-theme='dark'] .dv-top-side-title-dashboard-table {border-bottom-color: rgba(256,256,256,.2) !important}
 #dv-dashboard-main[data-theme='dark'] .dv-input{
     background-color: var(--darkest-blue);
     border-color: rgba(256, 256, 256, .2);
